# g4d-demo

./: .gitmodules  CMakeLists.txt  README.md
models/: cube.m4d  germa.m4d
src/: main.cpp
